[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "random-letter"
version = "0.0.2"
description = "A python package that allows to get a random letter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/timotheeMM/random-letter"
Issues = "https://github.com/timotheeMM/random-letter/issues"
